// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with icon and background 1`] = `
<div
  className="MenuIcon"
  style={
    Object {
      "background": "linear-gradient(180deg, #000000 0%, #ffffff 100%)",
      "height": "36px",
      "width": "36px",
    }
  }
>
  <Icon
    icon={
      Object {
        "id": "iconId",
      }
    }
  />
</div>
`;

exports[`renders with icon and custom size 1`] = `
<div
  className="MenuIcon"
  style={
    Object {
      "height": "auto",
      "width": "auto",
    }
  }
>
  <Icon
    icon={
      Object {
        "id": "iconId",
      }
    }
  />
</div>
`;
